--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
            <p>untuk paket aqidah kita juga menyediakan berbagai paket dengan harga menyesuaikan menu yang diinginkan pemesan.</p>
 	   </div>
            <div class="konten">
-            <a><img src="paketacara.png" ></a>
+            <a><img src="image/paketacara.png" ></a>
             <div class="judul">
                 <a>paket resepsi pernikahan dan pesta lainnya</a>
             </div>
