--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <div class="container">
        <header>
            <div class="logo">
-              <marquee> Bela Catering</marquee>
+		   <h1><marquee> Bela Catering</marquee></h1>
+		   <p><marquee> KEDIRI, JAWA TIMUR </marquee></p> 
+		   
            </div>
        </header>
        <nav>
             <ul>
                 <li><a href="index.html">Beranda</a></li>
      		<li><a href="https://jihannanda.github.io/jihan-nanda-putri-fadilah/">Tentang Saya</a></li>
+		 <input type="text" name="search" placeholder="Search.. (JIHAN NANDA PUTRI FADILAH 18610044)">
             </ul>
         </nav>
 	    <p> Melayani pesanan catering menu harian,nasi kotak,tumpeng, aqiqah,acara pernikahan dan pesta. </p>
@@ -62,7 +65,7 @@
 </html>
        <footer class="w3-container w3-teal w3-center w3-margin-top">    
 	<div class="form-style-10">
-<h1><span>untuk pemesanan bisa langsung ke alamat atau menghubungi kontak </span></h1>
+<h1><span>untuk pemesanan bisa langsung ke alamat atau menghubungi kontak terlebih dahulu</span></h1>
 <form>
 <div class="section"><span>1</span>First Name & Address</div>
 <div class="inner-wrap">
