--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
                 <li><a href="index.html">Beranda</a></li>
      		<li><a href="https://jihannanda.github.io/jihan-nanda-putri-fadilah/">Tentang Saya</a></li>
 		<li><a href="https://wa.me/<+6285708101235>">Hubungi Kami</a></li>
-                <li>Alamat</a></li>
-		 <input type="text" name="search" placeholder="Search.. (JIHAN NANDA PUTRI FADILAH 18610044)">
-            </ul>
+                 <input type="text" name="search" placeholder="Search>
+	</ul>
         </nav>
 	    <p> Melayani pesanan catering menu harian,nasi kotak,tumpeng, aqiqah,acara pernikahan dan pesta. </p>
        <article>
