--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
                 <li><a href="index.html">Beranda</a></li>
      		<li><a href="https://jihannanda.github.io/jihan-nanda-putri-fadilah/">Tentang Saya</a></li>
 		<li><a href="https://wa.me/<+6285708101235>">Hubungi Kami</a></li>
-                 <input type="text" name="search" placeholder="Search>
-	</ul>
+           </ul>
         </nav>
 	    <p> Melayani pesanan catering menu harian,nasi kotak,tumpeng, aqiqah,acara pernikahan dan pesta. </p>
        <article>
@@ -78,9 +77,10 @@
 <div class="inner-wrap">
 <label>Email Address <input type="email" name="field3" /></label>
 <label>Phone Number <input type="text" name="field4" /></label>
-</div>
+<label>PESAN <input type="text" name="field5" /></label>
+      </div>
 <div class="button-section">
-<input type="submit" name="Sign Up" />
+<input type="submit" name="KIRIM" />
 <span class="privacy-policy">
 <input type="checkbox" name="field7">You agree to our Terms and Policy.
 </span>
